--- a/index.html
+++ b/index.html
@@ -7,4 +7,40 @@
         <meta name="keywords" content="html5, codigo, aprendiendo, Perú">
         <title>Hola Mundo - Código - Perú</title>
     </head>
+    <body>
+        <header>
+            <h1>Título principal</h1>
+            <h2>Mensaje</h2>
+            <!-- h1 ... h6 -->
+        </header>
+        <nav>
+            <h2>Menú Principal</h2>
+            Inicio | Nosotros | Fotos | Blog | Contacto
+        </nav>
+        <main>
+            <h2>Nuevos artículos</h2>
+            <article>
+                <h3>Vacunatón Perú</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ipsum placeat adipisci maiores. Natus alias iusto facere atque cumque tempore, dolorum asperiores quia dolorem at minus nesciunt recusandae vero possimus.
+                </p>
+            </article>
+        </main>
+        <footer>
+            <div>
+                <h3>Contáctanos</h3>
+                <address>Av. Arequipa 1700</address>
+            </div>
+            <div>
+                <h3>Nosotros</h3>
+                <p>Somos <span style="color:blue">Código</span></p>
+                <small>Powered by Tecsup</small>
+            </div>
+            <div>
+                <h3>Políticas</h3>
+                <p>Cookies</p>
+                <p>Derechos reservados</p>
+            </div>
+        </footer>
+    </body>
 </html>
