--- a/Semana9/01-proyectovanilla/index.html
+++ b/Semana9/01-proyectovanilla/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./05-fetchmockapi.js"></script>
+    <script src="."></script>
 </body>
 </html>
